--- a/Projet_2_Michel_Mbaka.css
+++ b/Projet_2_Michel_Mbaka.css
@@ -194,29 +194,97 @@ display: flex;
 {
     margin-left: 10px;
 }
-
+/* paramettre de la sous section "ber"*/
+.ber
+{
+    display: flex; 
+    flex-wrap: wrap;
+    width: 590px;
+    height: 450px;
+    margin-left: 170px;
+    background-color: #f2f2f2;
+    border-radius: 15px 15px 15px 15px;   
+}
+.bloc_img
+{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    width: 590px;
+    height: 350px;
+    background-color: #f2f2f2;
+}
+.be1
+{
+display: flex;
+position: relative;
+margin-left: 10px;
+margin-top: 10px;
+width: 240px;
+}
+.be2,.be3,.be4,.be5,.be6,.be7
+{
+    display: flex;
+    flex-direction: column;
+    width: 170px;
+    height: 162px;
+    border-radius: 15px 15px 15px 15px;
+    background-color:white;
+}
+.b2,.b3,.b4,.b5,.b6,.b7
+{
+    display: flex;
+    border: 3px white solid;
+    align-items: center;
+    justify-content:center;
+    width: 165px;
+    height:80px;
+    border-radius: 15px 15px 0px 0px;
+    background-color:white;
+}
+.b22,.b33,.b44,.b55,.b66,.b77
+{
+    margin-top: 0px;
+    width: 155px;
+    height: 65px;
+    margin-left: 10px;
+    border-radius: 0px 0px 15px 15px;
+    background-color:white;
+    border: 3px white solid;
+}
+.b2 img,.b3 img,.b4 img,.b5 img,.b6 img,.b7 img
+{
+    width: 165px;
+    height: 80px;
+    border-radius: 15px 15px 0px 0px;
+}
+.b22 h1, .b33 h1,.b44 h1,.b55 h1,.b66 h1,.b77 h1
+{
+    font-size: 12px;
+}
+.b22 h2,.b33 h2,.b44 h2,.b55 h2,.b66 h2,.b77 h2
+{
+    font-size: 10px;
+}
+.be8
+{
+margin-left: 10px;
+margin-bottom: 0px;
+}
+/*Paramettre de sous section pop*/
 .sec1
 {
     display:flex;
     justify-content:space-between;
 }
-.heb
-{
-    width: 590px;
-    height: 450px;
-    margin-left: 170px;
-    background-color: #f2f2f2;
-    display: flex; 
-    border-radius: 15px 15px 15px 15px;   
-}
 .pop
 {
+    width: 300px;
+    height: 450px;
     display: flex;
     flex-direction: column;
     justify-content:space-around;
     align-items: center;
-    width: 300px;
-    height: 450px;
     margin-right:160px ;
     background-color: #f2f2f2;
     border-radius: 15px 15px 15px 15px;
@@ -227,9 +295,6 @@ display: flex;
 justify-content:space-between;
 width: 240px;
 }
-
-
-
 .po2, .po3, .po4
 {
     width: 240px;
@@ -237,10 +302,6 @@ width: 240px;
     border-radius: 15px 15px 15px 15px;
     background-color:white;
 }
-.po2
-{
-    display: flex;
-} 
 .po2, .po3, .po4
 {
     display: flex;
@@ -265,46 +326,21 @@ width: 240px;
     border-radius: 0px 15px 15px 0px;
     background-color:white;
 }
-.p2 img
+.p2 img,.p3 img,.p4 img
 {
     width: 110px;
     height: 100px;
     border-radius: 15px 0px 0px 15px;
 }
-.p22 h1
+.p22 h1,.p33 h1,.p44 h1
 {
     font-size: 12px;
 }
-.p22 h2
+.p22 h2,.p33 h2,.p44 h2
 {
     font-size: 10px;
 }
-.p3 img
-{
-    width: 110px;
-    height: 100px;
-    border-radius: 15px 0px 0px 15px;
-}
-.p33 h1
-{
-    font-size: 12px;
-}
-.p33 h2
-{
-    font-size: 10px;
-}
-.p4 img
-{
-    width: 110px;
-    height: 100px;
-    border-radius: 15px 0px 0px 15px;
-}
-.p44 h1
-{
-    font-size: 12px;
-}
-.p44 h2
-{
-    font-size: 10px;
-}
+
+
+
 
