--- a/Projet_2_Michel_Mbaka.css
+++ b/Projet_2_Michel_Mbaka.css
@@ -134,56 +134,57 @@ nav a:hover
     background-color: #0065fc;
     border-radius: 0px 10px 10px 0px;
 }
-.Filtre
-{
-    display: flex;
-    justify-content: space-around;
-    margin-left: 100px;
-    width: 600px;
-    height: 60px;
-    font-size: 14px;
-
-}
 .fil
 {
-    background-color: white;
-    border-radius: 20px 20px 20px 20px;
-    width: 70px;
+    display: flex;
+    width: 700px;
+    height: 80px;
+    border: 1px white solid;
+    align-items: center;
 }
-.fil_1,.fil_2,.fil_3,.fil_4
+.fi1
 {
     display: flex;
-    flex-wrap: nowrap;
-    width: 200px;
-
-
-
+    width: 60px;
+    height: 40px;
+    border: 1px white solid;
+    align-items: center;
 }
-
-.ic1,.ic2,.ic3,.ic4
+.fi2
 {
-    position: absolute;
-    z-index: 2;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    align-items: center;
+    width: 650px;
+    height: 40px;
+    border: 1px white solid;
+}
+.f1,.f2,.f3,.f4
+{
+    display: flex;
+    border: 1px #817f7f solid;
+    border-radius: 20px 20px 20px 20px;
+    align-items: center;
+}
+.f1_i,.f2_i,.f3_i,.f4_i
+{
     display: flex;
     width: 35px;
     height: 35px;
-    background-color: #deebff;
     border-radius: 35px;
+    background-color: #deebff;
     justify-content:center;
     align-items: center;
 }
-.eco,.fam,.rom,.ani,.fil
+.f1_ii,.f2_ii,.f3_ii,.f4_ii
 {
-    position: absolute;
-    z-index: 1;
     display: flex;
-    text-align: center;
-    border: 1px #817f7f solid;
-    background-color: white;
-    border-radius: 20px 20px 20px 20px;
-    padding: 9px;
-    padding-left: 40px;
+    padding-left: 10px;
+    padding-right: 10px;
+
 }
+
 
 
 h1
